# Acceptit

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  main.cpp  qmlmodules.cmake
Gallery/: CMakeLists.txt
Gallery/qml/: AppBarBottomPage.qml  AppBarTopPage.qml  ButtonPage.qml  CardLayout2.qml  CardLayout3.qml  ControlButtonPage.qml  DialogPage.qml  FaderPage.qml  FixedTabBarPage.qml  FooterTabBarPage.qml  FramePage.qml  GroupBoxLayout.qml  GroupBoxPage.qml  IconButtonPage.qml  LatoTabBarPage.qml  Main.qml  MaterialPage.qml  ScrollableTabBarPage.qml  SnackbarPage.qml  TabBarPage.qml  TypoPageEntry.qml
Gallery/qml/Gallery/: AppBarContent.qml  BannerPage.qml  CardLayout1.qml  CardLayout4.qml  CardPage.qml  ClusteredTabBarPage.qml  DateTimePickersPage.qml  DelegatePage.qml  DialogDelegatePage.qml  FABPage.qml  MaterialPage.qml  MenuBarPage.qml  SlidersPage.qml  StepperPage.qml  TextFieldPage.qml  ToolTipPage.qml  TypoPage.qml
